# controllers/landlord.controller.js
@@ -4,13 +4,13 @@ const Landlord = require('../models/landlord.model');
 
 
 
-// Create and Save a new Tutorial
+// Create and Save a new landlord
 exports.create = (req, res) => {
 
     // Validate request
     if ("body" in req) {
 
-        if ((!req.body.name) || (!req.body.password)) {
+        if ((!req.body.name) || (!req.body.password) || (!req.body.birthday) || (!req.body.number) || (!req.body.address) || (!req.body.email) || (!req.body.phone)) {
 
             res.status(400).json({
                 message: "Content cannot be empty!"
